--- a/crates/polars-plan/Cargo.toml
+++ b/crates/polars-plan/Cargo.toml
@@ -75,8 +75,7 @@ temporal = [
   "polars-core/dtype-datetime",
   "polars-core/dtype-time",
   "polars-core/dtype-i8",
-  "polars-core/dtype-i16",
-  "polars-core/strings"
+  "polars-core/dtype-i16"
 ]
 # debugging purposes
 fmt = ["polars-core/fmt"]
