--- a/crates/polars/Cargo.toml
+++ b/crates/polars/Cargo.toml
@@ -52,7 +52,7 @@ simd = ["polars-core/simd", "polars-io/simd", "polars-ops?/simd"]
 avx512 = ["polars-core/avx512"]
 nightly = ["polars-core/nightly", "polars-ops?/nightly", "simd", "polars-lazy?/nightly", "polars-sql?/nightly"]
 docs = ["polars-core/docs"]
-temporal = ["polars-core/temporal", "polars-lazy?/temporal", "polars-io/temporal", "polars-time"]
+temporal = ["polars-core/temporal", "polars-core/strings", "polars-lazy?/temporal", "polars-io/temporal", "polars-time"]
 random = ["polars-core/random", "polars-lazy?/random", "polars-ops/random"]
 default = [
   "docs",
